# NCS-Tutorial

./: .gitignore  README.md  usefulLinks.md
BLE/: README.md
BLE/NCSv1.9.0/: NCSv1.9.0_01_Beacon.md  NCSv1.9.0_02_peripheral_DeviceInformationService.md
BLE/NCSv2.2.0/: NCSv2.2.0_01_Beacon.md  NCSv2.2.0_02_peripheral_Service_DeviceInformation.md  NCSv2.2.0_03_peripheral_CustomService.md  NCSv2.2.0_10_peripheral_EnableSecurtiy.md
BLE/NCSv2.3.0/: NCSv2.3.0_01_Beacon.md  NCSv2.3.0_02_peripheral_Service_DeviceInformation.md  NCSv2.3.0_02a_peripheral_Service_ImmediateAlert.md  NCSv2.3.0_03_peripheral_CustomService.md  NCSv2.3.0_06_peripheral_2MPHY.md  NCSv2.3.0_10_peripheral_EnableSecurity.md
BLE/NCSv2.4.0/: NCSv2.4.0_02b_peripheral_service_battery.md
BLE/NCSv2.5.0/: NCSv2.5.0_01_Beacon.md  NCSv2.5.0_02_peripheral_Service_DeviceInformation.md  NCSv2.5.0_02a_peripheral_Service_ImmediateAlert.md  NCSv2.5.0_02b_peripheral_Service_Battery.md  NCSv2.5.0_03_peripheral_CustomService.md  NCSv2.5.0_06_peripheral_2MPHY.md  NCSv2.5.0_10_peripheral_EnableSecurity.md
BLE/NCSv2.5.2/: NCSv2.5.2_01_Beacon.md  NCSv2.5.2_02_peripheral_Service_DeviceInformation.md  NCSv2.5.2_03_peripheral_CustomService.md  NCSv2.5.2_10_peripheral_EnableSecurity.md
BLE/NCSv2.6.0/: NCSv2.6.0_02_peripheral_service_DeviceInformation.md  NCSv2.6.0_03_peripheral_CustomService.md
CMake/: README.md
CMake/define_app_version_in_cmake/: AppVersion.h.in  CMakeLists.txt  README.md
CMake/define_app_version_in_cmake/src/: main.c
VSC/: KeyboardReferenceSheets.md  README.md  ResetViewsAndPanels.md
(+672 files in other folders)
